# ml-in-production

./: README.md
module2/: collection.py  config.py  db.sqlite  db_model.py  logging_test.py  model.py  model_service.py  preparation.py  pyproject.toml  runner.py
module2/scr/: runner.py
module2/scr/config/: .env  __init__.py  config.py  db.py  logger.py  model.py
module2/scr/db/: db_model.py
module2/scr/model/: model_service.py
module2/scr/model/pipeline/: collection.py  model.py  preparation.py
notebooks/: random_forest_model.ipynb
